# pixlscan

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PACKAGING.md  build.sh  package-linux.sh  package-macos.sh  pixlscan.desktop  readme.md  run.sh
include/pixlscan/: Logger.hpp
src/: doc_snapper.cpp  doc_snapper.h  export_dialog.cpp  export_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h
